--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,16 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="select_mode">SELECT TRAVEL MODE:</string>
+
+
+    <string-array name="transport_mode">
+        <item>FLIGHT</item>
+        <item>BUS</item>
+        <item>TRAIN</item>
+        <item>DRIVE</item>
+    </string-array>
+    <string name="title_activity_auto_suggest">AutoSuggestActivity</string>
+
 
 </resources>
